# dagbot

./: .dockerignore  .gitignore  Dockerfile  README.md  alpine.Dockerfile  dagbot.env  deployment.yaml  gen-config.py  migration.sql  pyproject.toml  requirements.txt  sample.configuration.yaml  start.sh
.github/workflows/: docker.yaml  sentry.yaml
dagbot/: __init__.py  __main__.py  bot.py
dagbot/data/: __init__.py  dirtywords.txt  hangman.py  imgfliptemplates.json  notonion.txt  onion.txt  textdata.py
dagbot/extensions/: ai.py  animals.py  automeme.py  developer.py  errors.py  events.py  fun.py  games.py  help.py  memes.py  misc.py  newimag.py  reddit.py  settings.py  tags.py  text.py  uploader.py  util.py  whysomart.py
dagbot/utils/: badwordcheck.py  caching.py  context.py  conventionalpag.py  converters.py  daggypag.py  exceptions.py  logger.py
