[tool.poetry]
name = "dagbot"
version = "3.1.6"
description = "Fun Meme Discord bot"
authors = ["Daggy1234"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
"discord.py" = {git = "https://github.com/rapptz/discord.py"}
art = "^5.7"
sr-api = "^1.1.3"
async-cse = "^0.3.0"
async-cleverbot = "^0.2.2"
jishaku = {git="https://github.com/Gorialis/jishaku/"}
tabulate = "^0.8.10"
psutil = "^5.9.1"
humanize = "^4.2.3"
owotext = "^1.1.1"
asyncpg = "^0.26.0"
beautifulsoup4 = "^4.11.1"
zalgoify = "^1.1"
PyYAML = "^6.0.0"
sentry-sdk = "^1.9.0"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
cryptography = "37.0.4"
vaporwavely = "^1.0.1"
PyDictionary = "^2.0.1"
validator-collection = "^1.5.0"
matplotlib = "^3.5.2"
RandomWords = "^0.3.0"
Pillow = "9.2.0"
numpy = "1.23.1"
polaroid = "^0.3.2"
aiohttp = "^3.8.1"
asyncdagpi = "^4.1.3"
async-timeout = "^4.0.2"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
